--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-Hello World
+<!doctype html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>AHEAD Sports Engineering, LLC.</title>
+    <style>
+body {
+  font-family: Helvetica;
+  margin: 0;
+  padding: 0;
+  width:100%;
+  height:100%;
+}
+
+#header-fixed {
+  position: fixed;
+  text-align: center;
+  top: 40%;
+  left: 0px;
+  width: 100%;
+  height: 140px;
+}
+
+h1 {
+  font-size: 60px;
+  font-weight: bold;
+  letter-spacing: -2px;
+}
+
+
+body {
+  animation: fadeIn 3s ease 0s 1 normal;
+  -webkit-animation: fadeIn 3s ease 0s 1 normal;
+}
+
+@keyframes fadeIn {
+  0% {opacity: 0}
+  100% {opacity: 1}
+}
+
+@-webkit-keyframes fadeIn {
+  0% {opacity: 0}
+  100% {opacity: 1}
+}
+</style>
+  </head>
+  <body>
+    <div id="header-fixed">
+    <h1><span style="background-color: #000; color: #fff; border-radius: 4px; padding: 0 12px 0 12px;">AHEAD</span> Sports Engineering, LLC.</h1>
+    </div>
+  </body>
+</body>
