--- a/index.html
+++ b/index.html
@@ -23,10 +23,27 @@ body {
 
 h1 {
   font-size: 60px;
+  line-height: 1em;
+  margin: 0
+  padding: 0
   font-weight: bold;
-  letter-spacing: -2px;
+  letter-spacing: -1px;
 }
 
+h1 > span {
+  background-color: #000;
+  color: #fff;
+  border-radius: 5px;
+  padding: 0 12px 0 12px;
+}
+
+p {
+  margin-top: 10%;
+  font-size: 20px;
+
+  animation: fadeIn 4s ease 0s 1 normal;
+  -webkit-animation: fadeIn 4s 0s 1 normal;
+}
 
 body {
   animation: fadeIn 3s ease 0s 1 normal;
@@ -46,7 +63,8 @@ body {
   </head>
   <body>
     <div id="header-fixed">
-    <h1><span style="background-color: #000; color: #fff; border-radius: 4px; padding: 0 12px 0 12px;">AHEAD</span> Sports Engineering, LLC.</h1>
+    <h1><span>AHEAD</span> Sports Engineering, LLC.</h1>
+    <p>WE'RE COMMING SOON...</p>
     </div>
   </body>
 </body>
