images/ahead-sports-engineering-llc.png: add logo file.

--- a/index.html
+++ b/index.html
@@ -30,13 +30,6 @@ h1 {
   letter-spacing: -1px;
 }
 
-h1 > span {
-  background-color: #000;
-  color: #fff;
-  border-radius: 5px;
-  padding: 0 12px 0 12px;
-}
-
 p {
   margin-top: 10%;
   font-size: 20px;
@@ -63,7 +56,7 @@ body {
   </head>
   <body>
     <div id="header-fixed">
-    <h1><span>AHEAD</span> Sports Engineering, LLC.</h1>
+    <img src="images/ahead-sports-engineering-llc.png" width="800" height="110" />
     <p>WE'RE COMMING SOON...</p>
     </div>
   </body>
