--- a/index.html
+++ b/index.html
@@ -3,17 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Official information from AHEAD Sports Engineering, LLC.">
+    <meta name="author" content="AHEAD Sports Engineering, LLC.">
     <title>AHEAD Sports Engineering, LLC.</title>
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-    <!-- Custom styles for this template -->
     <link href="css/landing-page.css" rel="stylesheet">
   </head>
   <body>
-    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#"><img src="img/logo.png" width="300" alt="AHEAD Sports Engineering, LLC." style+"margin: 0; padding: 0;"/></a>
@@ -36,7 +34,6 @@
       </div>
     </nav>
 
-    <!-- Header -->
     <header class="intro-header">
       <div class="container">
         <div class="intro-message">
@@ -70,7 +67,6 @@
     <section class="content-section-a" id="projects">
       <div class="container">
         <div class="row">
-
           <div class="col-lg-5 ml-auto">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
@@ -107,29 +103,27 @@
             <div class="clearfix"></div>
             <h2 class="section-heading">AHEAD Sports Engineering, LLC.について</h2>
             <p class="lead">AHEAD Sports Engineeringは競技とアスリートの数値モデル化、計測、シミュレーション、数理最適化を通じて、アスリートのパフォーマンスを最大化します。</p>
-  <dl>
-    <dt>名称</dt><dd>合同会社アヘッドスポーツエンジニアリング<br />AHEAD Sports Engineering, LLC.</dd>
-    <dt>設立</dt><dd>２０１７年９月４日</dd>
-    <dt>代表社員</dt><dd>小山浩之</dd>
-    <dt>本店</dt><dd>東京都練馬区</dd>
-    <dt>業務内容</dt><dd>
-  <ul>
-    <li>物理モデルと疲労プロフィールを用いたシミュレーションと最速ペース探索・提案</li>
-    <li>リハーサル・トレーニング用シミュレーター開発</li>
-    <li>競技分析</li>
-    <li>競技・トレーニング用計測機器開発</li>
-  </ul>
-</dd>
-  </dl>
+            <dl>
+              <dt>名称</dt><dd>合同会社アヘッドスポーツエンジニアリング<br />AHEAD Sports Engineering, LLC.</dd>
+              <dt>設立</dt><dd>２０１７年９月</dd>
+              <dt>代表社員</dt><dd>小山浩之</dd>
+              <dt>本店</dt><dd>東京都練馬区</dd>
+              <dt>業務内容</dt>
+              <dd>
+                <ul>
+                  <li>物理モデルと疲労プロフィールを用いたシミュレーションと最速ペース探索・提案</li>
+                  <li>リハーサル・トレーニング用シミュレーター開発</li>
+                  <li>競技分析</li>
+                  <li>競技・トレーニング用計測機器開発</li>
+                </ul>
+              </dd>
+            </dl>
           </div>
           <div class="col-lg-5 mr-auto ">
 <!--            <img class="img-fluid" src="img/phones.png" alt=""> -->
           </div>
         </div>
-
       </div>
-      <!-- /.container -->
-
     </section>
 
     <aside class="banner">
