--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       </div>
     </footer>
 
-<!--    <script src="vendor/jquery/jquery.min.js"></script> -->
+    <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/popper/popper.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
   </body>
