--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="css/landing-page.css" rel="stylesheet">
+    <script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Organization",
+  "name": "AHEAD Sports Engineering, LLC.",
+  "url": "http://sportsengineering.co.jp",
+  "logo": "http://sportsengineering.co.jp/img/logo-250.png",
+  "sameAs": [
+    "https://www.facebook.com/AheadSportsEngineering",
+    "https://twitter.com/AHEAD_SPORTS"
+  ]
+}
+    </script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
